<?xml version="1.0" encoding="utf-8"?>
<resources>
   <!-- COMMON -->
    <string name="app_name">Facebook Friends</string>
    <string name="app_id">480200108696000</string>
    <string name="no_data">No Data</string>
    <string name="button_retry">Retry</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="connection_alert">No Internet connection!</string>
    <string name="connection_proposal">Do you want to sign in with Facebook?</string>
    <string name="message_no_empty">This field cannot be empty!</string>
    
    <!-- MENU -->
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit profile</string>
    
    <!-- MainActivity -->
    
     
    <!-- ProfileActivity -->
    <string name="me_birth">Date of birth:</string>
    <string name="me_location">Location:</string>
    <string name="me_link">Go to my page >>></string>
    <string name="me_image_description">Me</string>
    <string name="me_country">Country</string>
    <string name="me_state">State</string>
    <string name="me_city">City</string>
    <string name="me_street">Street</string>
    <string name="me_zip">ZIP</string>
    <string name="me_latitude">Latitude</string>
    <string name="me_longitude">Longitude</string>
    
    <!-- EditProfileActivity -->
    <string name="first_name_lable">First name</string>
    <string name="middle_name_lable">Middle name</string>
    <string name="last_name_lable">Last name</string>
    <string name="username_lable">Username</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    
    <!-- PREFERENCES -->
    <string name="app_preferences">AppPreferences</string>
    <string name="pref_user_id">user_id</string>
    
    <!-- CALENDAR VIEW -->
    <string name="dateSliderTitle">Date</string>
    <string name="Sun">sun</string>
    <string name="Mon">mon</string>
    <string name="Tue">tue</string>
    <string name="Wed">wed</string>
    <string name="Thu">thu</string>
    <string name="Fri">fri</string>
    <string name="Sat">sat</string>
    <string name="button_done">Done</string>
</resources>