<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
	tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
	    <TextView
	        android:id="@+id/profile_no_data"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
			android:layout_marginTop="100dp"		        
	        android:text="@string/no_data"
	        android:textColor="#ADADAD"
	        android:textSize="20sp"
	        android:visibility="gone" 
	        />
	        
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/profile_holder"
		    >
		
			<com.facebook.widget.ProfilePictureView
	            android:id="@+id/profile_pic"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:contentDescription="@string/me_image_description"
	            facebook:preset_size="normal" 
	            android:layout_margin="5dp"/>   
		    
		    <TextView 
		        android:id="@+id/name_me"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/profile_pic"
		        android:textStyle="bold"
		        android:textSize="16sp"
		        />
		    
		    <TextView 
		        android:id="@+id/username_me"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/profile_pic"
		        android:layout_below="@id/name_me"
		        android:textStyle="bold"
		        android:textSize="14sp"
		        />
		    
		    <TextView
		        android:id="@+id/birthday_me_lable"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/username_me"
		        android:layout_below="@+id/username_me"
		        android:text="@string/me_birth"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:visibility="gone" />

		    <TextView
		        android:id="@+id/birthday_me"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/birthday_me_lable"
		        android:layout_below="@+id/birthday_me_lable"
		        android:textSize="14sp" 
		        android:layout_marginLeft="10dp"/>
		 
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/profile_pic"
		        android:layout_marginLeft="5dp"
		        android:orientation="vertical" >
		        
		        <TextView 
			        android:id="@+id/link_me"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="14sp"
		        />
	           
			 	<TextView 
			        android:id="@+id/location_me_lable"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:textSize="14sp"
			        android:text="@string/me_location"
			        android:visibility="gone"
			        />   
			        
			 	<TextView 
			        android:id="@+id/location_country"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        />
			 	
			 	<TextView 
			        android:id="@+id/location_state"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        /> 
			        
			 	<TextView 
			        android:id="@+id/location_city"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        /> 
			        
			 	<TextView 
			        android:id="@+id/location_street"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        /> 
			        
			 	<TextView 
			        android:id="@+id/location_zip"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        /> 
			        
			 	<TextView 
			        android:id="@+id/location_latitude"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        />
			 	
			 	<TextView 
			        android:id="@+id/location_longitede"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:textSize="14sp"
			        /> 
		        
		    </LinearLayout>
	
	   	</RelativeLayout>
    </FrameLayout>
	
</ScrollView>